--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,7 +31,7 @@
             </ion-col>
 
             <ion-col>
-              <ion-card (click)="openLoginpage('admin')" class="card">
+              <ion-card (click)="openLoginpage('accountant')" class="card">
                 <img class="img imgheight" src="../../assets/accountant.jfif" alt="">
                 <ion-card-content class="cententheight">
                   ACCOUNTANT LOGIN
@@ -40,7 +40,7 @@
             </ion-col>
 
             <ion-col>
-              <ion-card (click)="openLoginpage('hod')" class="card">
+              <ion-card (click)="openLoginpage('admin')" class="card">
                 <img class="img imgheight" src="https://portal.cust.pk/images/as.jpg" alt="">
                 <ion-card-content class="cententheight">
                   ADMIN LOGIN
@@ -74,7 +74,7 @@
             </ion-col>
 
             <ion-col size="6">
-              <ion-card (click)="openLoginpage('admin')" class="card">
+              <ion-card (click)="openLoginpage('accountant')" class="card">
                 <img class="img imgheight" src="../../assets/accountant.jfif" alt="">
                 <ion-card-content class="cententheight">
                   ACCOUNTANT LOGIN
@@ -83,7 +83,7 @@
             </ion-col>
 
             <ion-col size="6">
-              <ion-card (click)="openLoginpage('hod')" class="card">
+              <ion-card (click)="openLoginpage('admin')" class="card">
                 <img class="img imgheight" src="https://portal.cust.pk/images/as.jpg" alt="">
                 <ion-card-content class="cententheight">
                   ADMIN LOGIN
@@ -117,7 +117,7 @@
             </ion-col>
 
             <ion-col size="8" offset="2.3">
-              <ion-card (click)="openLoginpage('admin')" class="card">
+              <ion-card (click)="openLoginpage('accountant')" class="card">
                 <img class="img imgheight" src="../../assets/accountant.jfif" alt="">
                 <ion-card-content class="cententheight">
                   ACCOUNTANT LOGIN
@@ -126,7 +126,7 @@
             </ion-col>
 
             <ion-col size="8" offset="2.3">
-              <ion-card (click)="openLoginpage('hod')" class="card">
+              <ion-card (click)="openLoginpage('admin')" class="card">
                 <img class="img imgheight" src="https://portal.cust.pk/images/as.jpg" alt="">
                 <ion-card-content class="cententheight">
                   ADMIN LOGIN
