--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,6 +1,18 @@
 <ion-header>
-  <ion-toolbar color="tertiary">
-    <ion-title style="font-family: 'impact';font-size:35px;margin:10px;">Admin Portal</ion-title>
+  <ion-toolbar color="none" style="background: white;">
+    <div class="headerparent">
+
+      <div class="header">
+        <div style="color: black;" class="name">
+          TheSmartSchool
+        </div>
+        <div class="items">
+
+          <ion-button (click)="logOut()" class="dosisfont" fill="outline" color="light">logout</ion-button>
+
+        </div>
+      </div>
+    </div>
   </ion-toolbar>
 </ion-header>
 
@@ -28,6 +40,9 @@
           <ion-item color="none" button mode="ios" style="background: white;color:black"
             (click)="changeShow('accountants')">
             <div class="option">Accountants</div>
+          </ion-item>
+          <ion-item color="none" button mode="ios" style="background: white;color:black" (click)="changeShow('admins')">
+            <div class="option">ADMIN</div>
           </ion-item>
         </ion-card>
       </ion-col>
@@ -62,16 +77,21 @@
                 ADD CLASS DETAILS
               </h1>
               <ion-item color="none" style="color:black;">
-                <ion-label position="fixed">Course:</ion-label>
+                <ion-label position="float">Course:</ion-label>
                 <ion-input inputmode="text" required [(ngModel)]="name"></ion-input>
               </ion-item>
               <ion-item color="none" style="color:black;">
                 <ion-label position="fixed">Teacher:</ion-label>
-                <ion-select [(ngModel)]="teacher" style="width: 60px;height: 40px;background-color: white;">
-                  <ion-select-option *ngFor="let teacher of teachers" value='{{teacher.name}}'
+                <ion-select (ionChange)="choosecat(teacher)" [(ngModel)]="teacher"
+                  style="width: 60px;height: 40px;background-color: white;">
+                  <ion-select-option *ngFor="let item of allteachers" value='{{item.uid}}'
                     style="background-color: white;">
-                    {{teacher.name}}</ion-select-option>
+                    {{item.name}}</ion-select-option>
                 </ion-select>
+              </ion-item>
+              <ion-item color="none" style="color:black;">
+                <ion-label position="float">Teacher Name:</ion-label>
+                <ion-input inputmode="text" required [(ngModel)]="teacherName"></ion-input>
               </ion-item>
               <ion-button size="full" fill="clear" style="font-family: impact;font-size:40px;" (click)="addClass()">
                 Submit</ion-button>
@@ -85,7 +105,7 @@
                   Available Classes
                 </div>
               </ion-item>
-              <ion-item *ngFor="let class of classes" color="none" style="color:black;" mode = "ios">
+              <ion-item *ngFor="let class of classes" color="none" style="color:black;" mode="ios">
                 <ion-icon name="person-circle-outline"></ion-icon>
                 <ion-label style="padding-left:10px;">
                   {{class.name}}
@@ -164,7 +184,7 @@
                   {{teacher.name}}
                 </ion-label>
                 <div slot="end">
-                  <ion-button color="warning" (click) = "sendWarning(teacher.uid)">Send Warning</ion-button>
+                  <ion-button color="warning" (click)="sendWarning(teacher.uid)">Send Warning</ion-button>
                   <ion-button color="danger" (click)="removeTeacher(teacher)">Remove</ion-button>
                 </div>
               </ion-item>
@@ -220,7 +240,8 @@
                 <ion-label position="fixed">Salary:</ion-label>
                 <ion-input inputmode="numeric" type="number" required [(ngModel)]="salary"></ion-input>
               </ion-item>
-              <ion-button size="full" fill="clear" style="font-family: impact;font-size:40px;" (click)="addAccountant()">
+              <ion-button size="full" fill="clear" style="font-family: impact;font-size:40px;"
+                (click)="addAccountant()">
                 Submit</ion-button>
             </ion-card>
           </div>
@@ -239,14 +260,14 @@
                   {{teacher.name}}
                 </ion-label>
                 <div slot="end">
-                  <ion-button color="warning" (click) = "sendWarning(teacher.uid)">Send Warning</ion-button>
+                  <ion-button color="warning" (click)="sendWarning(teacher.uid)">Send Warning</ion-button>
                   <ion-button color="danger" (click)="removeAccountant(teacher)">Remove</ion-button>
                 </div>
               </ion-item>
             </ion-card>
           </div>
         </div>
-        
+
         <div *ngIf="toShow == 'students'" class="toShow">
           <div *ngIf="subOption == '' || !subOption">
             <ion-card color="tertiary" style="display: inline-block;max-width: 400px;" mode="ios" button
@@ -292,8 +313,12 @@
                 <ion-input type="password" inputmode="text" required [(ngModel)]="password"></ion-input>
               </ion-item>
               <ion-item color="none" style="color:black;">
+                <ion-label position="float">FATHER/GUARDIAN:</ion-label>
+                <ion-input type="text" inputmode="text" required [(ngModel)]="parent"></ion-input>
+              </ion-item>
+              <ion-item color="none" style="color:black;">
                 <ion-label position="fixed">Reg:</ion-label>
-                <ion-input inputmode="numeric" type="number" required [(ngModel)]="reg"></ion-input>
+                <ion-input inputmode="text" type="text" required [(ngModel)]="reg"></ion-input>
               </ion-item>
               <ion-button size="full" fill="clear" style="font-family: impact;font-size:40px;" (click)="addStudent()">
                 Submit</ion-button>
@@ -314,12 +339,109 @@
                   {{student.name}}
                 </ion-label>
                 <div slot="end">
-                  <ion-button color="warning" (click) = "sendWarning(student.uid)">Send Warning</ion-button>
+                  <ion-button color="warning" (click)="sendWarning(student.uid)">Send Warning</ion-button>
                   <ion-button color="danger" (click)="removeStudent(student)">Remove</ion-button>
                 </div>
               </ion-item>
             </ion-card>
           </div>
+        </div>
+
+        <div *ngIf="toShow == 'admins' " class="toShow">
+          <ion-card mode="ios" color="none" style="background: white;width: 1000px;display:inline-block">
+            <h1 style="font-size:40px;color:black;font-family: impact;">
+              ADD ADMIN
+            </h1>
+            <ion-item color="none" style="color:black;">
+              <ion-label position="fixed">Name:</ion-label>
+              <ion-input inputmode="text" required [(ngModel)]="name"></ion-input>
+            </ion-item>
+            <ion-item color="none" style="color:black;">
+              <ion-label position="fixed">Phone:</ion-label>
+              <ion-input inputmode="numeric" required [(ngModel)]="phone"></ion-input>
+            </ion-item>
+            <ion-item color="none" style="color:black;">
+              <ion-label position="fixed">Email:</ion-label>
+              <ion-input inputmode="email" required [(ngModel)]="email"></ion-input>
+            </ion-item>
+            <ion-item color="none" style="color:black;">
+              <ion-label position="fixed">Password:</ion-label>
+              <ion-input type="password" inputmode="text" required [(ngModel)]="password"></ion-input>
+            </ion-item>
+
+            <ion-button size="full" fill="clear" style="font-family: impact;font-size:40px;" (click)="addAdmin()">
+              Submit</ion-button>
+          </ion-card>
+        </div>
+
+        <div *ngIf="toShow=='requests'">
+
+          <div style="text-align: center;max-width: 90%;position: relative;left: 3em;top: 20%;">
+
+            <div style="display: flex;justify-content: space-between;">
+              <h1 style="color: black;font-family: text;font-weight: bold;">ANNOUNCEMENTS</h1>
+              <ion-button (click)="hideForm()" color="none" style="background: black;color: white;font-family: text;"
+                mode='ios'>
+                ADD
+              </ion-button>
+            </div>
+            <div style="height: 15em;width: 100%;border: 1px solid blue;border-radius: 25px;background: white;">
+
+            </div>
+
+          </div>
+
+          <div *ngIf="showForm"
+            style="position:fixed;right:25%;top:20%;z-index:1000;height: 30em;width: 50%;background: white; color: black;box-shadow: rgba(0, 0, 0, 0.596);box-sizing: border-box;border: 1px solid black; ">
+
+            <div style="position: relative;left:94%;top: 3%;">
+              <ion-icon (click)="hideForm()" color="danger" style="font-size: 30px;" name="close-outline"></ion-icon>
+            </div>
+            <div style="display: flex;justify-content: center;align-items: center;flex-direction: column;padding:30px">
+
+              <div>
+
+                <ion-title style="color: black;font-weight: bold;" class="headinone">ADD A NEW ANNOUNCEMENT</ion-title>
+
+
+              </div>
+
+              <div style=" padding-top: 7px;" class="fields">
+
+
+                <div class="paddtop">
+                  <ion-label class="ion-label" style="display: flex;justify-content: flex-start;">MESSAGE
+                  </ion-label>
+                  <ion-input class="ion-input" [(ngModel)]="email" placeholder='Enter your message'></ion-input>
+                </div>
+
+                <div class="paddtop">
+                  <ion-select placeholder="ANNOUNCEMENT FOR?" class="ion-input">
+
+                    <ion-select-option *ngFor="let item of abc" value='{{item}}'>
+                      {{item}}
+                    </ion-select-option>
+                  </ion-select>
+                </div>
+
+                <div class="paddtop">
+                  <ion-button style=" max-width: 50vh;" color="none" style="background-color: black;color: white;"
+                    expand='block'>
+                    ADD
+                  </ion-button>
+                  <div style="display: flex;">
+                    <div style="width: 10em;"></div>
+                    <div style="width: 20em;"></div>
+                  </div>
+                </div>
+
+
+              </div>
+
+            </div>
+
+          </div>
+
         </div>
       </ion-col>
     </ion-row>
