--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -1,10 +1,113 @@
+.header {
+    width: 100%;
+    background-color: white;
+    color: black;
+    height: 3em;
+}
+.headerparent {
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.name {
+    position: relative;
+    font-size: 2em;
+    font-weight: bold;
+    color: white;
+    font-family: text;
+}
+.items {
+    position: relative;
+    float: right;
+    bottom: 2.3em;
+    right: 4px;
+}
+
+.dosisfont {
+    font-family: "Dosis", sans-serif;
+}
+.bars {
+    margin-left: 30px;
+    background: black;
+}
+
+.bars:hover {
+    background: rgb(175, 175, 175);
+}
+span:hover {
+    cursor: pointer;
+}
+ion-button:hover {
+    --color: rgb(0, 0, 0);
+}
+
+.activated {
+    box-shadow: 0 4px 2px -2px gray;
+    color: rgb(38, 153, 247);
+}
+
+.hoo {
+    padding: 5px;
+    transition: 300ms;
+}
+
+.hoo:hover {
+    color: rgb(45, 119, 255);
+    box-shadow: 0 4px 2px -3px gray;
+    transition: 100ms;
+}
+
+.hoo:active {
+    color: rgb(255, 255, 255);
+}
+.headinone {
+    font-family: title;
+    font-size: 40px;
+}
+
+.headintwo {
+    font-size: 12px;
+    font-family: "Hammersmith One", sans-serif;
+}
+
+.fields {
+    padding: 30px;
+    font-family: "Hammersmith One", sans-serif;
+}
+.paddtop {
+    padding-top: 20px;
+}
+
+.ion-label {
+    color: black !important;
+    font-weight: 300;
+    font-size: 1rem !important;
+}
+
+.ion-input {
+    font-size: 10px;
+    font-family: "Oxygen", sans-serif;
+    border: 2px solid rgba(0, 0, 0, 0.415);
+    max-width: 50vh;
+    text-align: left;
+}
+//fonts
+@import url("https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@700&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap");
+
 .option {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.2em;
     color: rgb(0, 0, 0);
 }
 
-.toShow{
+.toShow {
     text-align: center;
 }
 
