--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -125,6 +125,11 @@ ion-button:hover {
     overflow: hidden;
 }
 
+h6 {
+    color: black;
+    font-family: text;
+}
+
 .card:nth-child(1) {
     margin-right: 30px;
 }
