--- a/src/app/splashscreen/splashscreen.page.scss
+++ b/src/app/splashscreen/splashscreen.page.scss
@@ -1,5 +1,11 @@
 .background {
-    background-color: red;
+  background: #200122; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #6f0000, #200122); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to left,
+    #6f0000,
+    #200122
+  );
     height: 100%;
     position: relative;
     overflow: hidden;
